Bug Fixes & Style Updates
___ Bugs Fixed ___
Fixed issue on visited links where color was not the desired color
Fixed issue - specific to Firefox at mobile device-widths - where
  .project__link's were hidden & overflowing .project__links-container

___ Style Updates ___
Added hover transitions to all footer links

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,10 @@
 
   /* * --clr-primary */
   /* taken from placeholder/unsplash image */
-  --clr-primary: #e14e62;
+  /* --clr-primary: #e14e62; */
+  /* -- variation */
+  --clr-primary: #e15155;
+
   /* --clr-primary: #afdee6; */
   /* green from resumemaker */
   /* --clr-primary: #2ab993; */
@@ -475,11 +478,6 @@ header {
   box-shadow: var(--bs);
 }
 
-/* ANCHOR */
-/* .intro__cta:visited {
-  color: var(--clr-light);
-} */
-
 .intro__cta:hover {
   background: rgba(0, 0, 0, 0.75);
 }
@@ -776,7 +774,6 @@ header {
 
   box-shadow: var(--bs);
   font-size: var(--fs-body);
-  overflow: hidden;
 }
 
 /* --- Laptop + --- */
@@ -1018,7 +1015,8 @@ header {
 }
 
 .project,
-.project__info {
+.project__info,
+.project__links-container {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 6px;
 }
@@ -1027,10 +1025,16 @@ header {
   border-top-right-radius: 20px;
 }
 
+.project__links-container {
+  /* prevent .project__link from overflowing container */
+  overflow: hidden;
+}
+
 /* --- Laptop + --- */
 @media (min-width: 800px) {
   .project,
-  .project__info {
+  .project__info,
+  .project__links-container {
     /* Reset border-radius */
     border-radius: 0;
     border-bottom-right-radius: 20px;
@@ -1061,29 +1065,52 @@ header {
   justify-content: space-evenly;
   background-color: var(--clr-black);
   color: var(--clr-light);
-  font-size: 2.1rem;
+  font-size: clamp(1.8rem, 2vw, 2.1rem);
   text-align: center;
   padding: 5rem 0;
   color: var(--clr-primary);
 }
 
-.footer__mail-to-link {
+.footer__link--mailto {
   color: var(--clr-light);
   text-decoration: none;
   max-width: max-content;
   display: flex;
   align-items: center;
-  gap: 0.5em;
+  gap: 1rem;
   font-weight: var(--fw-bold);
-  /* transition: all 0.15s; */
+  transition: all 0.3s ease;
 }
 
-.footer__mail-to-link .fa-envelope {
+.footer__link--mailto:hover {
+  opacity: 0.6;
+}
+
+.footer__link--mailto .fa-envelope {
   color: var(--clr-primary);
 }
 
-.footer__mail-to-link:hover .email {
-  text-decoration: underline;
+.footer__link--mailto .email {
+  position: relative;
+}
+
+.footer__link--mailto .email:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  background: var(--clr-light);
+  transform: scaleX(0%);
+  transform-origin: right;
+  transition: transform 0.3s ease;
+}
+
+.footer__link--mailto:hover .email:after {
+  transform-origin: left;
+  transform: scaleX(100%);
+  /* text-decoration: underline; */
 }
 
 .social-list {
@@ -1093,20 +1120,20 @@ header {
   gap: 6rem;
   font-size: 3rem;
   padding: 0;
-  margin: 2em 0 0;
+  margin: 6rem 0 0;
 }
 
-.social-list__item a {
+.social-list__link {
   color: var(--clr-primary);
-  /* transition: all 0.3s ease; */
+  transition: all 0.3s ease;
 }
-.social-list__item a:visited {
+.social-list__link,
+.social-list__link:visited {
   color: var(--clr-primary);
 }
 
-.footer__mail-to-link:hover,
-.social-list__item:hover {
-  opacity: 0.7;
+.social-list__link:hover {
+  opacity: 0.6;
 }
 
 /* FIXME - NOT IN USE */
